build system and a few content changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,14 +11,13 @@
   <meta content="{{page.description}}" name="description" />
   <meta content="{{page.keywords}}" name="keywords" />
   <link rel="alternate" type="application/atom+xml" title="Content Feed" href="/atom.xml" />
-  <link rel="stylesheet" href="css/inuit.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/site.css" />
 </head>
 <body>
-  <h1><a rel="homepage">Hallucinations of Grandeur</a></h1>
+  <h1><a rel="homepage" href="/">milewide</a></h1>
   {{ content }}
   <footer>
-    <p class="copyright" property="dc:rights">&copy; <span property="dc:dateCopyrighted">2001-2011</span> <a href="mailto:chris@hamant.net" property="dc:publisher">Chris Hamant</a>. Licensed under <a rel="cc:license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons</a>.</p>
+    <p class="copyright" property="dc:rights">&copy; <span property="dc:dateCopyrighted">2001-2011</span> <a href="mailto:chris@hamant.net" property="dc:publisher">Chris Hamant</a>. <span class="license">Licensed under <a rel="cc:license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons</a>.</span></p>
   </footer>
   <script>
     (function() {
