--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 <article>
-  <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+  <h2><a href="{{ page.url }}">{{ page.title }}</a></h2>
   {{ content }}
 </article>
