minor fixes and editing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,10 @@
   <link rel="stylesheet" href="/css/site.css" />
 </head>
 <body>
-  <h1><a rel="homepage" href="/">milewide</a></h1>
+  <hgroup>
+    <h1><a rel="homepage" href="/">a milewide</a></h1>
+    <h4>my little soapbox</h4>
+  </hgroup>
   {{ content }}
   <footer>
     <p class="copyright" property="dc:rights">&copy; <span property="dc:dateCopyrighted">2001-2011</span> <a href="mailto:chris@hamant.net" property="dc:publisher">Chris Hamant</a>. <span class="license">Licensed under <a rel="cc:license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons</a>.</span></p>
