--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,3 +5,4 @@ layout: default
   <h2><a href="{{ page.url }}">{{ page.title }}</a></h2>
   {{ content }}
 </article>
+<div id="disqus_thread"></div>
