updating to work with new jekyll

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -12,6 +12,8 @@
   <meta content="{{page.keywords}}" name="keywords" />
   <link rel="alternate" type="application/atom+xml" title="Content Feed" href="/atom.xml" />
   <link rel="stylesheet" href="/css/site.css" />
+  <link rel="openid.server" href="http://www.myopenid.com/server" />
+  <link rel="openid.delegate" href="http://chrishamant.myopenid.com/" />
 </head>
 <body>
   <hgroup>
